--- a/apps/templates/home/event-travel.html
+++ b/apps/templates/home/event-travel.html
@@ -23,8 +23,8 @@
                                     </div>
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:">Travel Bila Was</a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Bookings</a></li>
+                                        <li class="breadcrumb-item"><a href="javascript:">Event Travels</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -38,26 +38,39 @@
                                 <div class="col-sm-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5>Solo Travel Booking Form</h5>
+                                            <h5>Event Travel Booking Form</h5>
                                         </div>
                                         <div class="card-body">
-                                            <h5>Book for a Solo Travel Here</h5>
+                                            <h5>Book for an Event Travel Here</h5>
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <form>
                                                         <div class="row">
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputLocation">Pick Up Location</label>
+                                                                <label for="inputLocation">Type of Event</label>
                                                                 <input type="text" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
 
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputDestination">Destination</label>
+                                                                <label for="inputDestination">Pickup Location</label>
                                                                 <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputNoSeats">Number of Seats</label>
+                                                                <label for="inputDestination">County of Destination</label>
+                                                                <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                            </div>
+                                                            <div class="form-group col-md-6">
+                                                                <label for="inputDestination">Constituency</label>
+                                                                <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                            </div>
+                                                            <div class="form-group col-md-6">
+                                                                <label for="inputDestination">Town</label>
+                                                                <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                            </div>
+
+                                                            <div class="form-group col-md-6">
+                                                                <label for="inputNoSeats">Number of Passengers</label>
                                                                 <input type="number" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats">
                                                             
                                                             </div>
