--- a/apps/templates/home/parcel-transport.html
+++ b/apps/templates/home/parcel-transport.html
@@ -23,8 +23,8 @@
                                     </div>
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:">Travel Bila Was</a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Bookings</a></li>
+                                        <li class="breadcrumb-item"><a href="javascript:">Parcel Transportation</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -38,10 +38,10 @@
                                 <div class="col-sm-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5>Solo Travel Booking Form</h5>
+                                            <h5>Parcel Transport Booking Form</h5>
                                         </div>
                                         <div class="card-body">
-                                            <h5>Book for a Solo Travel</h5>
+                                            <h5>Deliver your parcel with us here!</h5>
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
@@ -57,17 +57,8 @@
                                                                 <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
                                                             </div>
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputNoSeats">Number of Seats</label>
+                                                                <label for="inputNoSeats">Parcel Photo</label>
                                                                 <input type="number" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats">
-                                                            
-                                                            </div>
-                                                            <div class="form-group col-md-6">
-                                                                <label for="inputTravelDate">Date of Travel</label>
-                                                                <input type="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel">
-                                                            </div>
-                                                            <div class="form-group col-md-6">
-                                                                <label for="inputTime">Time of Travel</label>
-                                                                <input type="time" class="form-control" id="inputTime" placeholder="Time of Travel">
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="amount">Amount</label>
