--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -15,7 +15,7 @@
                 <li class="nav-item pcoded-menu-caption">
                     <label>Navigation</label>
                 </li>
-                <li data-username="dashboard Default Ecommerce CRM Analytics Crypto Project" 
+                <li data-username="dashboard Dashboard Page" 
                     class="nav-item {% if 'index' in segment %} active {% endif %}">
                     <a href="/" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span
                             class="pcoded-mtext">Dashboard</span></a>
@@ -27,7 +27,7 @@
                             <span class="pcoded-mtext">Profile Page</span></a>
                 </li>                
                 <li class="nav-item pcoded-menu-caption">
-                    <label>UI Element</label>
+                    <label>components</label>
                 </li>
                 <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds"
                     class="nav-item pcoded-hasmenu ">
@@ -35,44 +35,20 @@
                             class="pcoded-mtext">Our Services</span></a>
                     <ul class="pcoded-submenu">
                         <li class=""><a href="/solo-travel.html" class="">Solo Travel</a></li>
-                        <li class=""><a href="/bc_badges.html" class="">Event Travel</a></li>
-                        <li class=""><a href="/bc_breadcrumb-pagination.html" class="">Institutional Travel</a></li>
-                        <li class=""><a href="/bc_collapse.html" class="">Parcel Travel</a></li>
-                        <li class=""><a href="/bc_tabs.html" class="">Tabs & pills</a></li>
-                        <li class=""><a href="/bc_typography.html" class="">Typography</a></li>
-
-
-                        <li class=""><a href="/icon-feather.html" class="">Feather<span
-                                class="pcoded-badge label label-danger">NEW</span></a></li>
+                        <li class=""><a href="/event-travel.html" class="">Event Travel</a></li>
+                        <li class=""><a href="/student-travel.html" class="">Institutional Travel</a></li>
+                        <li class=""><a href="/parcel-transport.html" class="">Parcel Travel</a></li>
                     </ul>
                 </li>
                 <li class="nav-item pcoded-menu-caption">
-                    <label>Forms & table</label>
+                    <label>Reports</label>
                 </li>
-                <li data-username="form elements advance componant validation masking wizard picker select"
-                    class="nav-item {% if 'form_elements' in segment %} active {% endif %}">
-                    <a href="/form_elements.html" class="nav-link "><span class="pcoded-micon"><i
-                            class="feather icon-file-text"></i></span><span
-                            class="pcoded-mtext">Form elements</span></a>
                 </li>
                 <li data-username="Table bootstrap datatable footable" 
                     class="nav-item {% if 'tbl_bootstrap' in segment %} active {% endif %}">
                     <a href="/tbl_bootstrap.html" class="nav-link "><span class="pcoded-micon"><i
                             class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
                 </li>
-                <li class="nav-item pcoded-menu-caption">
-                    <label>Chart & Maps</label>
-                </li>
-                <li data-username="Charts Morris" 
-                    class="nav-item {% if 'chart-morris' in segment %} active {% endif %}">
-                    <a href="/chart-morris.html" class="nav-link "><span
-                        class="pcoded-micon"><i class="feather icon-pie-chart"></i></span><span class="pcoded-mtext">Chart</span></a>
-                </li>
-                <li data-username="Maps Google" 
-                    class="nav-item {% if 'map-google' in segment %} active {% endif %}">
-                    <a href="/map-google.html" class="nav-link "><span
-                        class="pcoded-micon"><i class="feather icon-map"></i></span><span
-                        class="pcoded-mtext">Maps</span></a></li>
                 <li class="nav-item pcoded-menu-caption">
                     <label>Pages</label>
                 </li>
@@ -81,8 +57,8 @@
                     <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span
                             class="pcoded-mtext">Authentication</span></a>
                     <ul class="pcoded-submenu">
-                        <li class=""><a href="/register.html" class="" target="_blank">Sign UP</a></li>
-                        <li class=""><a href="/login.html" class="" target="_blank">Sign IN</a></li>
+                        <li class=""><a href="/register.html" class="" target="_blank">Register</a></li>
+                        <li class=""><a href="/login.html" class="" target="_blank">Login</a></li>
                     </ul>
                 </li>
 
@@ -93,7 +69,7 @@
                 <li data-username="Disabled Menu" class="nav-item">
                     <a href="{{ url_for('authentication_blueprint.logout') }}" class="nav-link">
                         <span class="pcoded-micon"><i class="feather icon-power"></i></span><span class="pcoded-mtext">Logout</span>
-                    </a>Datta Able
+                    </a>Travel Bila Was
                 </li>               
             </ul>
         </div>
