--- a/apps/templates/home/page-blank.html
+++ b/apps/templates/home/page-blank.html
@@ -18,11 +18,11 @@
                             <div class="row align-items-center">
                                 <div class="col-md-12">
                                     <div class="page-header-title">
-                                        <h5 class="m-b-10">Sample Page</h5>
+                                        <h3 class="m-b-10">Welcome {{ current_user.username|capitalize }}!</h3>
                                     </div>
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:">Sample Page</a></li>
+                                        <li class="breadcrumb-item"><a href="javascript:">Dashboard</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -33,14 +33,51 @@
                         <div class="page-wrapper">
                             <!-- [ Main Content ] start -->
                             <div class="row">
-                                <div class="col-sm-12">
+                                <div class="col-sm-6">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5>Hello card</h5>
+                                            <h5>SOLO TRAVEL</h5>
                                         </div>
                                         <div class="card-block">
-                                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                                            <p>Enhance your journey with our hassle-free matatu ticket booking services.
                                             </p>
+                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h5>EVENT TRAVEL</h5>
+                                        </div>
+                                        <div class="card-block">
+                                            <p>Elevate your special occasions, whether it's weddings, dowry ceremonies, or burials, by booking our matatus.
+                                            </p>
+                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h5>INSTITUTION TRAVEL</h5>
+                                        </div>
+                                        <div class="card-block">
+                                            <p>Discover cost-effective and convenient matatu services customized for students and organizations.
+                                            </p>
+                                            <button type="submit" class="btn btn-primary">Explore</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h5>PARCEL SERVICES</h5>
+                                        </div>
+                                        <div class="card-block">
+                                            <p>Reliably send your parcels with speed and security through our efficient service.
+                                            </p>
+                                            <button type="submit" class="btn btn-primary">Explore</button>
                                         </div>
                                     </div>
                                 </div>
