--- a/apps/templates/home/student-travel.html
+++ b/apps/templates/home/student-travel.html
@@ -23,8 +23,8 @@
                                     </div>
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="/"><i class="feather icon-home"></i></a></li>
+                                        <li class="breadcrumb-item"><a href="javascript:">Travel Bila Was</a></li>
                                         <li class="breadcrumb-item"><a href="javascript:">Bookings</a></li>
-                                        <li class="breadcrumb-item"><a href="javascript:">Solo Travels</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -38,17 +38,17 @@
                                 <div class="col-sm-12">
                                     <div class="card">
                                         <div class="card-header">
-                                            <h5>Solo Travel Booking Form</h5>
+                                            <h5>Students Travel Booking Form</h5>
                                         </div>
                                         <div class="card-body">
-                                            <h5>Book a car for yourself:</h5>
+                                            <h5>Book for Students Here</h5>
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <form>
                                                         <div class="row">
                                                             <div class="form-group col-md-6">
-                                                                <label for="inputLocation">Pick-Up Location</label>
+                                                                <label for="inputLocation">Pick Up Location</label>
                                                                 <input type="text" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
 
                                                             </div>
@@ -76,7 +76,7 @@
 
                         
                                                         </div>
-                                                        <button type="submit" class="btn btn-primary">Submit Booking</button>
+                                                        <button type="submit" class="btn btn-primary">Book Now</button>
                                                     </form>
                                                 </div>
                                                 
