--- a/apps/templates/home/solo-travel.html
+++ b/apps/templates/home/solo-travel.html
@@ -45,33 +45,42 @@
                                             <hr>
                                             <div class="row">
                                                 <div class="col-md-12">
-                                                    <form>
+                                                    <form action="/solo" method="POST">
                                                         <div class="row">
+                                                                <input type="text" name="activity" value="Trip_travel" hidden class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputLocation">Pick-Up Location</label>
-                                                                <input type="text" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location">
+                                                                <input type="text" name="Location" class="form-control" id="inputLocation" aria-describedby="locationHelp" placeholder="Enter Pick Up Location" required>
 
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputDestination">Destination</label>
-                                                                <input type="text" class="form-control" id="inputDestination" placeholder="Enter Destination">
+                                                                <select class="form-control" name="destination" id="inputDestination" placeholder="Enter Destination" value="{{ destination }}"
+                                                                    style="border: 2px solid #555;">
+                                                                    <option selected>{{ destination }}</option>
+                                                                    <option value="Nairobi">Nairobi</option>
+                                                                    <option value="Eldoret">Eldoret</option>
+                                                                    <option value="Nakuru">Nakuru</option>
+                                                                    <option value="Nyeri">Nyeri</option>
+                                                                    <option value="Nyahururu">Nyahururu</option>
+                                                                </select>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputNoSeats">Number of Seats</label>
-                                                                <input type="number" class="form-control" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats">
+                                                                <input type="number" class="form-control" name="seats" id="inputNoSeats" aria-describedby="noSeatsHelp" placeholder="Enter Number of Seats" required>
                                                             
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTravelDate">Date of Travel</label>
-                                                                <input type="date" class="form-control" id="inputTravelDate" placeholder="Enter Date of Travel">
+                                                                <input type="date" class="form-control" name="TravelDate" id="inputTravelDate" placeholder="Enter Date of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="inputTime">Time of Travel</label>
-                                                                <input type="time" class="form-control" id="inputTime" placeholder="Time of Travel">
+                                                                <input type="time" class="form-control" name="Time" id="inputTime" placeholder="Time of Travel" required>
                                                             </div>
                                                             <div class="form-group col-md-6">
                                                                 <label for="amount">Amount</label>
-                                                                <input type="number" class="form-control" id="amount">
+                                                                <input type="number" name="amount" class="form-control" id="amount" readonly value="{{amount}}">
                                                             </div>
 
                         
@@ -94,6 +103,42 @@
             
         </div>
     </div>
+
+    <script>
+        function updateAmount() {
+            const selectElement = document.querySelector('select[name="destination"]');
+            const destination = selectElement.value;
+            const seatsElement = document.querySelector('input[name="seats"]');
+            const seats = parseInt(seatsElement.value);
+    
+            const countyAmounts = {
+                'Nairobi': 800,
+                'Eldoret': 1000,
+                'Nakuru': 900,
+                'Nyeri': 950,
+                'Nyahururu': 850,
+            };
+    
+            let amount = '';
+            if (destination in countyAmounts) {
+                const baseAmount = countyAmounts[destination];
+                amount = baseAmount.toString();
+                if (seats && seats > 1) {
+                    amount = (baseAmount * seats).toString();
+                }
+            }
+    
+            const amountElement = document.querySelector('input[name="amount"]');
+            amountElement.value = amount;
+        }
+    
+        document.querySelector('select[name="destination"]').addEventListener('change', updateAmount);
+        document.querySelector('input[name="seats"]').addEventListener('input', updateAmount);
+    
+        updateAmount();
+    </script>
+    
+    
     <!-- [ Main Content ] end -->
 
 {% endblock content %}
